[package]
name = "rsyncwebsocket"
version = "0.1.0"
authors = ["gerold"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "*", features = ["json", "charset"]}
serde_json = "1"
serde = {version = "*", features = ["derive"]}
ws = {version = "*", features = ["ssl"] }
log = "*"
env_logger = "*"
chrono = "0.4"