[package]
name = "deribit_rgetter"
version = "0.1.0"
authors = ["gerold"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "*", features = ["json", "charset"]}
serde_json = "1"
serde = {version = "*", features = ["derive"]}
ws = {version = "*", features = ["ssl"] }
log = "*"
#env_logger = "*"
slog = "2.5.2"
slog-term = "2.4.2"
slog-async = "2.3.0"
slog-stdlog = "4.0.0"
slog-scope = "4.3.0"
#slog-json = "2.3.0"
slog-journald = "2.1.1"
chrono = "0.4"
slog-envlogger = "2.2.0"
url = "2.1.1"
time = "*"